Updated it so Tile class holds an array of all possible colors for any Tile, subclasses set this